--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.7.0",
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@react-three/drei": "^9.76.0",
+    "@react-three/fiber": "^8.13.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
     "framer-motion": "^10.12.16",
+    "maath": "^0.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-intersection-observer": "^9.5.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-tilt": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
