--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.152.1",
     "bootstrap": "^5.3.0",
     "framer-motion": "^10.12.16",
     "maath": "^0.6.0",
@@ -23,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-tilt": "^1.0.2",
+    "three": "^0.153.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
