make changes to portfolio website based on feedback I got

--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
   "browserslist": {
     "production": [
       ">0.2%",
+      "last 2 versions",
+      "Firefox ESR",
       "not dead",
-      "not op_mini all"
+      "op_mini all"
     ],
     "development": [
       "last 1 chrome version",
